Fix footer overlap in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -799,6 +799,7 @@ footer {
 
     #main-contact {
         flex-direction: column;
+        height: auto;
     }
 
     .map {
